; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_ktrace.c_ktrace_reset.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_ktrace.c_ktrace_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ktrace_active_mask = common dso_local global i64 0, align 8
@ktrace_keep_ownership_on_reset = common dso_local global i32 0, align 4
@ktrace_state = common dso_local global i64 0, align 8
@KTRACE_STATE_OFF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ktrace_reset(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @ktrace_assert_lock_held()
  %4 = load i64, i64* @ktrace_active_mask, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %16

6:                                                ; preds = %1
  %7 = load i32, i32* @ktrace_keep_ownership_on_reset, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %6
  %10 = load i64, i64* @ktrace_state, align 8
  %11 = load i64, i64* @KTRACE_STATE_OFF, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  br label %15

15:                                               ; preds = %9, %6
  br label %19

16:                                               ; preds = %1
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @ktrace_reset_internal(i32 %17)
  br label %19

19:                                               ; preds = %16, %15
  ret void
}

declare dso_local i32 @ktrace_assert_lock_held(...) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @ktrace_reset_internal(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
